--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </figure>
           <br>
           <h1 class="title is-1 is-spaced">
-            Sam Akeyooo
+            Sam Akeyo
           </h1>
         </div>
       </div>
