modify about me

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <h1 class="title">About me</h1>
             <h2 class="subtitle">
             </br>
-            I'm a fourth-year student studying Applied Math and Informatics at the University of Washington, and I'm an aspiring Product Manager who is passionate about building and enhancing products and services that have high impact and build community.
+            I'm an aspiring Product Manager studying Informatics and Applied Math at the University of Washington. I'm passionate about building and enhancing products and services that have high impact and build community.
             <br><br>
             I have two (2) years of experience working as a back-end developer in an agile environment. In this capacity, I worked with various product owners and teams to continually identify evolving stakeholder needs and turn those objectives into user stories for development and deployment.
             <br><br>
