--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <h2 class="title is-3">University of Washington Student Government</h2>
           <h6 class="title is-6">July 2019 - June 2020</h6>
           <h6 class="title is-6">Board Director & President Pro Tempore</h6>
-          <p>Portfolio Manager for externally-facing advocacy/lobbying units -- namely Office of Government Relations and Student Senate.</p>
+          <p>Portfolio Manager for externally-facing advocacy/lobbying units -- namely the Office of Government Relations and Student Senate.</p>
         </div>
       </div><br>
       <div class="columns is-mobile">
