--- a/index.html
+++ b/index.html
@@ -162,8 +162,9 @@
           </div>
           <div class="column is-four-fifths">
             <h2 class="title is-3">University of Washington</h2>
-            <h6 class="title is-6">BS Informatics, Applied Mathematics</h6>
+            <h6 class="title is-6">BS Informatics</h6>
             <p>Minor in Mathematics</p>
+            <p>Minor in Applied Mathematics</p>
           </div>
         </div>
       </div>
