--- a/index.html
+++ b/index.html
@@ -162,9 +162,30 @@
           </div>
           <div class="column is-four-fifths">
             <h2 class="title is-3">University of Washington</h2>
-            <h6 class="title is-6">BS Informatics</h6>
+            <p><b>BS in Informatics</b></p>
             <p>Minor in Mathematics</p>
             <p>Minor in Applied Mathematics</p>
+            <p><i>In progress</i></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container">
+    <div class="columns">
+      <div class="column is-8 is-offset-2 is-spaced">
+        <h1 class="title">Certifications</h1>
+        <div class="columns is-mobile">
+          <div class="column is-one-fifth">
+            <img src="images/pmi.jpg">
+          </div>
+          <div class="column is-four-fifths">
+            <h2 class="title is-3">Project Management Institute</h2>
+            <p><b>Certified Associate in Project Management (CAPM)</b></p>
+            <p><i>In progress</i></p>
           </div>
         </div>
       </div>
