fix github link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="columns">
       <div class="column is-8 is-offset-2 is-spaced">
         <h1 class="title">Projects + updates coming soon!</h1>
-        <h2 class="subtitle"><a href="https://twitter.com/SamAkeyo">github.com/sam-akeyo</a></h2>
+        <h2 class="subtitle"><a href="https://www.github.com/sam-akeyo">github.com/sam-akeyo</a></h2>
       </div>
     </div>
   </div>
