--- a/index.html
+++ b/index.html
@@ -198,9 +198,12 @@
                         </div>
                         <div class="column is-four-fifths">
                            <h2 class="title is-4 has-text-weight-bold">Project Management Institute</h2>
-                           <h2 class="subtitle is-6 has-text-weight-bold">Certified Associate in Project Management (CAPM)</h2>
+                           <h2 class="subtitle is-6 has-text-weight-bold">BS in Informatics [[testing]]</h2>
                            <h2 class="title"></h2>
-                           <h2 class="subtitle is-6 is"><i>In progress</i></h2>
+                           <h2 class="subtitle is-6 is">Minor in Mathematics<br>Minor in Applied Mathematics<i><br>In progress</i></h2>
+                           <!-- <h2 class="subtitle is-6 has-text-weight-bold">Certified Associate in Project Management (CAPM)</h2>
+                           <h2 class="title"></h2>
+                           <h2 class="subtitle is-6 is"><i>In progress</i></h2> -->
                         </div>
                      </div>
                   </div>
