--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                      <h1 class="title has-text-weight-bold">Certifications</h1>
                      <div class="columns is-mobile">
                         <div class="column is-one-fifth">
-                           <img src="images/project.png" alt="Project Management Institute logo">
+                           <img src="images/project.PNG" alt="Project Management Institute logo">
                         </div>
                         <div class="column is-four-fifths">
                            <h2 class="title is-4 has-text-weight-bold">Project Management Institute</h2>
