--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html class="no-js" lang="en">
    <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-NEP1316GVQ"></script>
+      <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+         
+         gtag('config', 'G-NEP1316GVQ');
+      </script>
       <meta charset="utf-8">
       <title>Sam Akeyo</title>
       <meta name="description" content="">
@@ -11,7 +20,6 @@
       <meta property="og:image" content="">
       <link rel="manifest" href="site.webmanifest">
       <link rel="apple-touch-icon" href="icon.png">
-     
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/main.css">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
@@ -58,7 +66,7 @@
                                 <a href="#" class="nav-item">Home</a>
                                 <a href="#" class="nav-item">Thoughts</a>
                               </div>
-                           -->
+                              -->
                         </nav>
                      </div>
                   </div>
@@ -94,18 +102,18 @@
          </div>
       </section>
       <section class="section">
-        <div class="container">
-           <div class="columns">
-              <div class="column is-8 is-offset-2 has-text-justified">
-                 <div class="box">
-                    <h1 class="title has-text-weight-bold">Projects</h1>
-                    <h2 class="subtitle is-6">Projects + updates coming soon! <a href="https://github.com/sam-akeyo" target="_blank">github.com/sam-akeyo</a></h2>
-                    <br>
-                 </div>
-              </div>
-           </div>
-        </div>
-     </section>
+         <div class="container">
+            <div class="columns">
+               <div class="column is-8 is-offset-2 has-text-justified">
+                  <div class="box">
+                     <h1 class="title has-text-weight-bold">Projects</h1>
+                     <h2 class="subtitle is-6">Projects + updates coming soon! <a href="https://github.com/sam-akeyo" target="_blank">github.com/sam-akeyo</a></h2>
+                     <br>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
       <section class="section">
          <div class="container">
             <div class="columns">
@@ -226,11 +234,5 @@
       <script src="js/vendor/modernizr-3.11.2.min.js"></script>
       <script src="js/plugins.js"></script>
       <script src="js/main.js"></script>
-      <!-- Google Analytics -->
-      <script>
-         window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-         ga('create', 'G-NEP1316GVQ', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-      </script>
-      <script src="https://www.google-analytics.com/analytics.js" async></script>
    </body>
 </html>
