fix justified text

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <section class="section">
          <div class="container">
             <div class="columns">
-               <div class="column is-8 is-offset-2 has-text-justified">
+               <div class="column is-8 is-offset-2">
                   <div class="box">
                      <h1 class="title has-text-weight-bold">Projects</h1>
                      <h2 class="subtitle is-6">Projects + updates coming soon! <a href="https://github.com/sam-akeyo" target="_blank">github.com/sam-akeyo</a></h2>
@@ -117,7 +117,7 @@
       <section class="section">
          <div class="container">
             <div class="columns">
-               <div class="column is-8 is-offset-2 has-text-justified">
+               <div class="column is-8 is-offset-2">
                   <div class="box">
                      <h1 class="title has-text-weight-bold">Experience</h1>
                      <div class="columns is-mobile">
@@ -184,7 +184,7 @@
       <section class="section">
          <div class="container">
             <div class="columns">
-               <div class="column is-8 is-offset-2 has-text-justified">
+               <div class="column is-8 is-offset-2">
                   <div class="box">
                      <h1 class="title has-text-weight-bold">Education</h1>
                      <div class="columns is-mobile">
@@ -218,7 +218,7 @@
       <section class="section">
          <div class="container">
             <div class="columns">
-               <div class="column is-8 is-offset-2 has-text-justified">
+               <div class="column is-8 is-offset-2">
                   <div class="box">
                      <h1 class="title has-text-weight-bold">Contact Me</h1>
                      <h2 class="subtitle is-6">Please contact me on <a href="https://twitter.com/samakeyo" target="_blank">Twitter</a>, 
