bug fix projects

--- a/index.html
+++ b/index.html
@@ -116,28 +116,22 @@
             <div class="column is-8 is-offset-2">
                <div class="box">
                   <h1 class="title has-text-weight-bold">Projects</h1>
-                  <h2 class="subtitle is-6"><i>Live updates <a
-                           href="https://www.notion.so/maysveryown/Sam-s-Projects-6d1391a966c74e688951f81b992df13f"
-                           target="_blank">here</a></i></h2>
+                  <h2 class="subtitle is-6"><i>Live updates <a href="https://www.notion.so/maysveryown/Sam-s-Projects-6d1391a966c74e688951f81b992df13f" target="_blank">here</a></i></h2>
                   <div class="tile is-ancestor">
                      <div class="tile is-6 is-vertical is-parent">
                         <div class="tile is-child notification is-success">
-                           <p class="title is-4"><a
-                                 href="https://www.notion.so/maysveryown/Sam-s-Projects-6d1391a966c74e688951f81b992df13f"
-                                 target="_blank">SyncMe</a></p>
-                           <p class="subtitle">Calendar app that syncs Google, Office, and Apple calendars via CRUD
+                           <p class="title is-4"><a href="https://www.notion.so/maysveryown/Sam-s-Projects-6d1391a966c74e688951f81b992df13f" target="_blank">SyncMe</a></p>
+                           <p class="subtitle">Calendar app syncs Google, Office, and Apple calendars via CRUD
                               operations</p>
-                           <figure class="image is-3by3">
+                           <figure class="image is-4by4">
                               <!--<img src="img/calendar.png">-->
                            </figure>
                         </div>
                         <div class="tile is-child notification is-info">
-                           <p class="title is-4"><a
-                                 href="https://www.notion.so/maysveryown/Sam-s-Projects-6d1391a966c74e688951f81b992df13f"
-                                 target="_blank">BookMe</a></p>
+                           <p class="title is-4"><a href="https://www.notion.so/maysveryown/Sam-s-Projects-6d1391a966c74e688951f81b992df13f" target="_blank">BookMe</a></p>
                            <p class="subtitle">Room booking tool for organizations -- optimizes for location and
                               amenities</p>
-                           <figure class="image is-3by3">
+                           <figure class="image is-4by4">
                               <!--<img src="img/handshake.png">-->
                            </figure>
                            </article>
@@ -145,23 +139,18 @@
                      </div>
                      <div class="tile is-6 is-vertical is-parent">
                         <div class="tile is-child notification has-background-danger">
-                           <p class="title is-4"><a
-                                 href="https://www.notion.so/maysveryown/Sam-s-Projects-6d1391a966c74e688951f81b992df13f"
-                                 target="_blank">COVID data (live)</a></p>
+                           <p class="title is-4"><a href="https://www.notion.so/maysveryown/Sam-s-Projects-6d1391a966c74e688951f81b992df13f" target="_blank">COVID data (live)</a></p>
                            <p class="subtitle">Data visualization tool for Coronavirus (COVID-19) cases in the United
                               States</p>
-                           <figure class="image is-3by3">
+                           <figure class="image is-4by4">
                               <!--<img src="img/graph.png">-->
                            </figure>
                         </div>
                         <div class="tile is-child notification is-warning">
-                           <p class="title is-4"><a
-                                 href="https://www.notion.so/maysveryown/Sam-s-Projects-6d1391a966c74e688951f81b992df13f"
-                                 target="_blank">Progress</a></p>
+                           <p class="title is-4"><a href="https://www.notion.so/maysveryown/Sam-s-Projects-6d1391a966c74e688951f81b992df13f" target="_blank">Progress</a></p>
                            <p class="subtitle">(<i>tbd</i>) Inspired by <a href="https://www.twitter.com/year_progress/"
-                                 target="_blank">@Year_Progress</a><br><br><br></p>
-                           <!-- DELETE <br>'s once you populate cell -->
-                           <figure class="image is-3by3">
+                                 target="_blank">@Year_Progress</a><br><br></p> <!-- DELETE <br>'s once you populate cell -->
+                           <figure class="image is-4by4">
                               <!--<img src="img/100.png">-->
                            </figure>
                         </div>
