add covid data project

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                      </div>
                      <div class="tile is-6 is-vertical is-parent">
                         <div class="tile is-child notification has-background-danger">
-                           <p class="title is-4"><a href="https://www.notion.so/maysveryown/Sam-s-Projects-6d1391a966c74e688951f81b992df13f" target="_blank">COVID data (live)</a></p>
+                           <p class="title is-4"><a href="https://sam-akeyo.github.io/COVID-19-data/" target="_blank">COVID data (live)</a></p>
                            <p class="subtitle">Data visualization tool for Coronavirus (COVID-19) cases in the United
                               States</p>
                            <figure class="image is-4by4">
